# github-notify

./: .gitattributes  .gitignore  .mise.toml  .npmrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO.md  Taskfile.yml  VERIFY-56.md  VERIFY.md  biome.json  eslint.config.js  index.html  lint-staged.config.mjs  package-lock.json  package.json  plan-2026-03-20-quality-improvement.md  pnpm-lock.yaml  renovate.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.gemini/: styleguide.md
.github/: copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md
.preserved-stashes/: stash-2-pre-gitcrypt-unlock-backup-20260427.patch  stash-3-pre-unlock-1777269950.patch
doc/: comprehensive-audit-2026-05-18.md  dev-guide.md  manual-qa-checklist.md  onboarding.md  qa-runbook-2026-05-18.md  releasing.md  test-strategy.md  ux-audit-2026-05-16.md
docs/: architecture.md  completion-criteria-2026-04-13.md  ui-design-project-notifications.md
e2e/: playwright.config.ts
openspec/: AGENTS.md  project.md
prompt/: README.md  prompt.md
scripts/: check-pr-evidence-gate.mjs  check-pr-evidence-gate.test.ts  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  error.rs  lib.rs  log_sanitizer.rs
src-tauri/src/background/: mod.rs  polling.rs
src-tauri/src/commands/: auth.rs  mod.rs  notifications.rs  settings.rs  streams.rs  tray.rs
src-tauri/src/github/: client.rs  mod.rs  queries.rs  secrets.rs  secrets.rs.example  types.rs
src-tauri/src/storage/: config.rs
(+417 files in other folders)
