[package]
name = "github-notify"
version = "0.1.0"
description = "GitHub Notification Manager Desktop App"
authors = ["kouiso"]
license = "MIT"
repository = "https://github.com/kouiso/github-notify"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri core and plugins
tauri = { version = "2.9.5", features = ["devtools", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "2.0"

# Logging
log = "0.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Audio playback
rodio = "0.19"
